--- a/player/pom.xml
+++ b/player/pom.xml
@@ -79,11 +79,11 @@
 			<artifactId>jakarta.validation-api</artifactId>
 			<!-- <version>2.0.2</version> -->
 		</dependency>
-		<dependency>
+<!-- 		<dependency>
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 			<version>2.0.0</version>
-		</dependency>
+		</dependency> -->
 	</dependencies>
 
 	<build>
