--- a/player/src/main/resources/application.properties
+++ b/player/src/main/resources/application.properties
@@ -8,4 +8,7 @@ spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto= update
 #spring.profiles.active=test
 server.servlet.context-path=/Api
+#springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.url=/openapi.yaml
 
