--- a/player/src/main/resources/application-test.properties
+++ b/player/src/main/resources/application-test.properties
@@ -1,3 +1,11 @@
+#spring.application.name=playertest
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=password
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.h2.console.enabled=true
+#spring.jpa.hibernate.ddl-auto= update
 spring.jpa.hibernate.ddl-auto= none
 spring.sql.init.mode= never
 
